# Tentacles

./: .antigravity  .env  PRD.md  index.html  package-lock.json  package.json  tailwind.config.js  telegram_config.json  vite.config.ts
agent-core/: Cargo.toml  cargo_errors.txt
agent-core/src/: api.rs  main.rs  memory.rs  models.rs  orchestrator.rs  skills.rs  test_ollama.rs  types.rs
src/: App.tsx  index.css
src/components/agents/: AgentConfigModal.tsx
src/components/auth/: ProtectedRoute.tsx
src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
src/components/models/: AddModelModal.tsx  AddRoutingRuleModal.tsx
src/components/workflows/: CustomNodes.tsx
src/lib/: supabase.ts
src/routes/: Agents.tsx  Chat.tsx  Dashboard.tsx  Memory.tsx  Models.tsx  Settings.tsx  Skills.tsx  Workflows.tsx
src/store/: agentStore.ts  chatStore.ts  memoryStore.ts  modelStore.ts  skillStore.ts  workflowStore.ts
supabase/functions/agents/: index.ts
supabase/functions/chat/: index.ts
supabase/functions/memory/: index.ts
supabase/functions/models/: index.ts
supabase/functions/skills/: index.ts
supabase/functions/workflows/: index.ts
supabase/migrations/: 20240101000001_realtime.sql
